--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /.nb-gradle/
 
 src/main/resources/application.properties
+/Users/themightyflorp/IdeaProjects/Pet-Tential/src/main/resources/application.properties
