--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/pettential?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=pettential_user
-spring.datasource.password=Kc@120892
+spring.datasource.password=Codeup12!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
