--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/pettential?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=petter_user
+spring.datasource.password=moocow
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
