--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/pettential?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=codeup_test_user
-spring.datasource.password=codeptestuser
->>>>>>> ae3baa4c0a3d527d7aaded1971de07ec437352b6
+spring.datasource.username=petter_user
+spring.datasource.password=moocow
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
