--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/pettential?createDatabaseIfNotExist=true&useSSL=false
 
-spring.datasource.username=root
-spring.datasource.password=Codeup12!
-
-spring.datasource.username=pettential_user
-spring.datasource.password=Kc@120892
+spring.datasource.username=petter_user
+spring.datasource.password=moocow
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
